--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -20,7 +20,7 @@ jobs:
           # rebase. Default is merge.
           merge_method: squash
           # Time zone to use. Default is UTC.
-          time_zone: 'UTC'
+          time_zone: 'JST'
           # Require all pull request statuses to be successful before
           # merging. Default is `false`.
           require_statuses_success: 'false'
